Added documentation to the new copy constructors in all unit classes. Linting in army class following sonar lint ang google checks.